# haroma

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  _check_mem.py  create_identity.py  import_learned_to_forest.py  main.py  newModules.txt  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-rl.txt  requirements-training-extras.txt  requirements.txt  setup_linux.sh  setup_windows.ps1
agents/: __init__.py  action_agent.py  background_agent.py  background_cadence.py  base.py  boot_agent.py  chat_latency.py  input_agent.py  message_bus.py  persona_agent.py  runtime_signals.py  shared_resources.py  trueself_agent.py
bridge/: README.md  __init__.py  haroma_client.py  ros2_stub.py  sample_http_bridge.py  stub_executor.py
config/: identity_slot_overlay.json
core/: ActionLoop.py  AffectiveReasoning.py  AutonomySandbox.py  BeliefCohesion.py  CellRoles.py  ConversationTracker.py  DiscourseProcessor.py  Dream.py  DreamConsolidator.py  EmbodiedModulation.py  EpisodeContext.py  GlobalWorkspace.py  Goal.py  HomeostaticDrives.py  InterlocutorModel.py  KnowledgeBase.py  KnowledgeGraph.py  MeaningLexicon.py  Memory.py  MemoryCore.py  NLUProcessor.py  Narrative.py  NexusMemoryBridge.py  OrganRegistry.py  OrganizationalGoalBoard.py  Perception.py  Persistence.py  Reconciliation.py  SoulBinder.py  SymbolicConflict.py  SymbolicQueue.py  SymbolicUtils.py  VirtualLLMTree.py  WorkingMemory.py  __init__.py  chat_recall_policy.py  cognitive_null.py  concurrency.py  derivation_merge.py  identity_slot_reply.py  (+3 more)
docs/: api-reference.md  architecture-audit.md  architecture.md  cognitive-cycle.md  design-philosophy.md  getting-started.md  gymnasium-bridge.md  index.md  lab-research.md  memory-forest.md  minded-architecture-metaphor.md  module-reference.md  production-hardening.md  reference-training-integrations.md  robot-cognitive-control-split.md  robot-integration.md  sensors.md  simulation-backends.md  soul-system.md  x7-features.md
engine/: AppraisalEngine.py  ArchitectureSearcher.py  CognitiveBackbone.py  ComputeFabric.py  CounterfactualEngine.py  CuriosityEngine.py  DoctrineCortex.py  EmotionEngine.py  FusionResolver.py  GoalSynthesizer.py  IdentityEngine.py  Imagination.py  LLMBackend.py  LLMContextReasoner.py  LanguageComposer.py  LearnedAttention.py  LoopMemoryLogger.py  MemorySummarizer.py  MentalSimulator.py  MetaCognitionEngine.py  ModelCache.py  NarrativeReflector.py  NeuralEncoder.py  PersonalityProfile.py  ProcessGate.py  ProgrammedLLM.py  ReasoningEngine.py  ReflectiveConsciousnessEngine.py  ResourceAdaptiveConfig.py  SelfModel.py  SymbolicLoopManager.py  TemporalEngine.py  TrainingScheduler.py  WebLearnCrawler.py  __init__.py
environment/: ActionDispatcher.py  EnvironmentGrounder.py  TextEnvironment.py
integrations/: __init__.py  robot_http_bridge.py
logs/: bulk_teach_report.json  bulk_teach_report_run.json  conv_100.jsonl  conv_100.jsonl.summary.json  conv_100_console.txt  (+5 more)
(+352 files in other folders)
